--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,11 +13,12 @@
   </title>
 </head>
 
-<body>
-  <!-- ---------------------------------  navbar -->
+<body class="d-flex flex-column h-100">
+  <!-- NAVBAR START HERE -->
   <nav class="navbar navbar-expand-lg navbar-light warna-dasar sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="/"><img class="d-inline-block align-middle me-1" src="./img/title.png" alt="" width="20" height="20"> <b class="d-inline-block align-middle">SIPTADIK</b></a>
+      <a class="navbar-brand" href="/"><img class="d-inline-block align-middle me-1" src="./img/title.png" alt=""
+          width="20" height="20"> <b class="d-inline-block align-middle">SIPTADIK</b></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,12 +35,14 @@
             <a class="nav-link" href="#">Bantuan</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
               Menu
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="./admin.html">Admin</a></li>
               <li><a class="dropdown-item" href="./tamu.html">Tamu</a></li>
+              <li><a class="dropdown-item" href="./riwayat.html">Riwayat</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
@@ -53,7 +57,7 @@
       </div>
     </div>
   </nav>
-  <!-- ----------------------------------////end navbar -->
+  <!-- NAVBAR END HERE -->
 
   <!-- ISI MULAI -->
   <meta http-equiv="refresh" content="0; url=./masuk.html" />
@@ -63,7 +67,7 @@
   <!-- ISI SELESAI -->
 
   <footer class="footer mt-auto py-3 warna-dasar">
-    <div class="container text-center">
+    <div class="text-center">
       <small><i><a href="/" class="text-dark">SIPTADIK - Sistem Informasi Tamu</a> | Copyright &copy; 2021 | <a
             href="https://github.com/Mohpoe/Sitfortam/" class="text-dark">Made with &hearts;</a></i></small>
     </div>
