--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100">
 
 <head>
   <meta charset="UTF-8">
@@ -13,7 +13,7 @@
   </title>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
   <!-- ---------------------------------  navbar -->
   <nav class="navbar navbar-expand-lg navbar-light warna-dasar sticky-top">
     <div class="container">
@@ -193,7 +193,7 @@
   </main>
 
   <footer class="footer mt-auto py-3 warna-dasar">
-    <div class="container text-center">
+    <div class="text-center">
       <small><i><a href="/" class="text-dark">SIPTADIK - Sistem Informasi Tamu</a> | Copyright &copy; 2021 | <a
             href="https://github.com/Mohpoe/Sitfortam/" class="text-dark">Made with &hearts;</a></i></small>
     </div>
