--- a/riwayat.html
+++ b/riwayat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100">
 
 <head>
   <meta charset="UTF-8">
@@ -15,7 +15,7 @@
   </title>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
   <!-- NAVBAR START HERE -->
   <nav class="navbar navbar-expand-lg navbar-light warna-dasar sticky-top">
     <div class="container">
@@ -273,12 +273,12 @@
   </div>
   <!-- ISI SELESAI -->
 
-  <footer class="footer mt-auto py-3 warna-dasar">
-    <div class="container text-center">
+	<footer class="footer mt-auto py-3 warna-dasar">
+    <div class="text-center">
       <small><i><a href="/" class="text-dark">SIPTADIK - Sistem Informasi Tamu</a> | Copyright &copy; 2021 | <a
-            href="https://github.com/Mohpoe/Sitfortam/" class="text-dark">Made with &hearts;</a></i></small>
+        href="https://github.com/Mohpoe/Sitfortam/" class="text-dark">Made with &hearts;</a></i></small>
     </div>
-  </footer>
+    </footer>
 
   <script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
