--- a/riwayat.html
+++ b/riwayat.html
@@ -70,7 +70,8 @@
         <div class="row">
           <div class="col-md-12">
             <div class="user-dashboard-info-box table-responsive mb-0 bg-white p-4 shadow-sm">
-              <input class="form-control d-inline-block" style="width: 20%;min-width: 200px;" type="search" placeholder="Search" aria-label="Search">
+              <input class="form-control d-inline-block" style="width: 20%;min-width: 200px;" type="search"
+                placeholder="Search" aria-label="Search">
               <i class="bi bi-filter-square-fill" style="font-size: 1.5rem;color: #ababab"></i>
               <i class="bi bi-arrow-right-square" style="font-size: 1.5rem;color: #ababab"></i>
               <i class="bi bi-arrow-left-square" style="font-size: 1.5rem;color: #ababab"></i>
@@ -138,7 +139,8 @@
                           <div class="mb-3 row">
                             <label class="col-sm-2 col-form-label">Instansi</label>
                             <div class="col-sm-10">
-                              <input type="text" readonly class="form-control-plaintext" value="Dinas Pendidikan Kabupaten Pinrang">
+                              <input type="text" readonly class="form-control-plaintext"
+                                value="Dinas Pendidikan Kabupaten Pinrang">
                             </div>
                           </div>
                           <div class="mb-3 row">
@@ -192,54 +194,54 @@
                   <!-- TAMU 2 END -->
                   <!-- MODAL TAMU 2 -->
                   <div class="modal fade" id="tamu2" tabindex="-1" aria-labelledby="exampleModalLabel"
-                  aria-hidden="true">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Detail Tamu 2</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                      </div>
-                      <div class="modal-body">
-                        <!-- ISI MODAL START HERE -->
-                        <div class="mb-3 row">
-                          <label class="col-sm-2 col-form-label">Nama</label>
-                          <div class="col-sm-10">
-                            <input type="text" readonly class="form-control-plaintext" value="Nama Tamu">
-                          </div>
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Detail Tamu 2</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="mb-3 row">
-                          <label class="col-sm-2 col-form-label">NIK/NIP</label>
-                          <div class="col-sm-10">
-                            <input type="text" readonly class="form-control-plaintext" value="98767654">
+                        <div class="modal-body">
+                          <!-- ISI MODAL START HERE -->
+                          <div class="mb-3 row">
+                            <label class="col-sm-2 col-form-label">Nama</label>
+                            <div class="col-sm-10">
+                              <input type="text" readonly class="form-control-plaintext" value="Nama Tamu">
+                            </div>
                           </div>
-                        </div>
-                        <div class="mb-3 row">
-                          <label class="col-sm-2 col-form-label">Instansi</label>
-                          <div class="col-sm-10">
-                            <input type="text" readonly class="form-control-plaintext" value="Pemkab Pinrang">
+                          <div class="mb-3 row">
+                            <label class="col-sm-2 col-form-label">NIK/NIP</label>
+                            <div class="col-sm-10">
+                              <input type="text" readonly class="form-control-plaintext" value="98767654">
+                            </div>
                           </div>
-                        </div>
-                        <div class="mb-3 row">
-                          <label class="col-sm-2 col-form-label">Tujuan</label>
-                          <div class="col-sm-10">
-                            <input type="text" readonly class="form-control-plaintext" value="Kunjungan Dinas">
+                          <div class="mb-3 row">
+                            <label class="col-sm-2 col-form-label">Instansi</label>
+                            <div class="col-sm-10">
+                              <input type="text" readonly class="form-control-plaintext" value="Pemkab Pinrang">
+                            </div>
                           </div>
-                        </div>
-                        <div class="mb-3 row">
-                          <label class="col-sm-2 col-form-label">Status</label>
-                          <div class="col-sm-10">
-                            <input type="text" readonly class="form-control-plaintext" value="Ditolak">
+                          <div class="mb-3 row">
+                            <label class="col-sm-2 col-form-label">Tujuan</label>
+                            <div class="col-sm-10">
+                              <input type="text" readonly class="form-control-plaintext" value="Kunjungan Dinas">
+                            </div>
                           </div>
+                          <div class="mb-3 row">
+                            <label class="col-sm-2 col-form-label">Status</label>
+                            <div class="col-sm-10">
+                              <input type="text" readonly class="form-control-plaintext" value="Ditolak">
+                            </div>
+                          </div>
+                          <!-- ISI MODAL END HERE -->
                         </div>
-                        <!-- ISI MODAL END HERE -->
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Keluar</button>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Keluar</button>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <!-- MODAL TAMU 2 -->
+                  <!-- MODAL TAMU 2 -->
 
                 </tbody>
               </table>
@@ -273,12 +275,12 @@
   </div>
   <!-- ISI SELESAI -->
 
-	<footer class="footer mt-auto py-3 warna-dasar">
+  <footer class="footer mt-auto py-3 warna-dasar">
     <div class="text-center">
       <small><i><a href="/" class="text-dark">SIPTADIK - Sistem Informasi Tamu</a> | Copyright &copy; 2021 | <a
-        href="https://github.com/Mohpoe/Sitfortam/" class="text-dark">Made with &hearts;</a></i></small>
+            href="https://github.com/Mohpoe/Sitfortam/" class="text-dark">Made with &hearts;</a></i></small>
     </div>
-    </footer>
+  </footer>
 
   <script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
