--- a/detail.html
+++ b/detail.html
@@ -48,6 +48,7 @@
 								<hr class="dropdown-divider">
 							</li>
 							<li><a class="dropdown-item" href="./detail.html">Profil</a></li>
+                            <li><a class="dropdown-item" href="./pejabat.html">Pejabat</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -303,7 +304,7 @@
 	<footer class="footer mt-auto py-3 warna-dasar">
 		<div class="text-center">
 			<small><i><a href="/" class="text-dark">SIPTADIK - Sistem Informasi Tamu</a> | Copyright &copy; 2021 | <a
-						href="https://github.com/Mohpoe/Sitfortam/" class="text-dark">Made with &hearts;</a></i></small>
+						href="https://github.com/Mohpoe/SIPTADIK/" class="text-dark">Made with &hearts;</a></i></small>
 		</div>
 	</footer>
 
