--- a/test.html
+++ b/test.html
@@ -1,65 +1,80 @@
+<!DOCTYPE html>
+<html class="h-100">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="icon" href="./favicon.ico">
 	<link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+	<link href="./assets/css/main.css" rel="stylesheet">
 	<title>
-		SIPTADIK | Admin
+		SIPTADIK | Halaman Baru
 	</title>
 </head>
 
-<body>
-	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-		<header class="mb-auto">
-			<div>
-				<h3 class="float-md-start mb-0">SIPTADIK</h3>
-				<nav class="nav nav-masthead justify-content-center float-md-end">
-					<a class="nav-link active" aria-current="page" href="#">Beranda</a>
-					<a class="nav-link" href="#">Riwayat</a>
-					<a class="nav-link" href="#">Kembali</a>
-				</nav>
+<body class="d-flex flex-column h-100">
+	<!-- NAVBAR START HERE -->
+	<nav class="navbar navbar-expand-lg navbar-light warna-dasar sticky-top">
+		<div class="container">
+			<a class="navbar-brand" href="/"><img class="d-inline-block align-middle me-1" src="./img/title.png" alt=""
+					width="20" height="20"> <b class="d-inline-block align-middle">SIPTADIK</b></a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/">Beranda</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Kontak</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Bantuan</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false">
+							Menu
+						</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="./admin.html">Admin</a></li>
+							<li><a class="dropdown-item" href="./tamu.html">Tamu</a></li>
+							<li><a class="dropdown-item" href="./riwayat.html">Riwayat</a></li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+							<li><a class="dropdown-item" href="./detail.html">Profil</a></li>
+							<li><a class="dropdown-item" href="./pejabat.html">Pejabat</a></li>
+						</ul>
+					</li>
+				</ul>
+				<section class="d-flex">
+					<!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+					<button class="btn bg-danger text-light" id="tbl-keluar">Keluar</button>
+				</section>
 			</div>
-		</header>
-	
-		<main class="px-3">
-			<h1>Uchiha Madara, M.Si</h1>
-			<p class="lead">
-				<table>
-					<tr>
-						<td class="fw-bold">Nama</td>
-						<td class="px-2">:</td>
-						<td>Uchiha Madara</td>
-					</tr>
-					<tr>
-						<td class="fw-bold">NIP</td>
-						<td class="px-2">:</td>
-						<td>123456789</td>
-					</tr>
-					<tr>
-						<td class="fw-bold">Jabatan</td>
-						<td class="px-2">:</td>
-						<td>Enemy</td>
-					</tr>
-				</table>
-			</p>
-			<p class="lead">
-				<a href="#" class="btn btn-lg btn-primary fw-bold">Kunjungi</a>
-				<a href="#" class="btn btn-lg btn-secondary fw-bold">Kembali</a>
-			</p>
-		</main>
-	
-		<footer class="mt-auto text-dark-50">
-			<p>
-				<small><i><a href="/" class="text-dark">Siptadik - Sistem Informasi Tamu</a> | Copyright &copy; 2021 | <a href="https://github.com/Mohpoe/Siptadik/" class="text-dark">Made with &hearts;</a></i></small>
-			</p>
-		</footer>
+		</div>
+	</nav>
+	<!-- NAVBAR END HERE -->
+
+	<!-- ISI MULAI -->
+	<div class="container">
+		sss
 	</div>
+	<!-- ISI SELESAI -->
+
+	<footer class="footer mt-auto py-3 warna-dasar">
+		<div class="text-center">
+			<small><i><a href="/" class="text-dark">SIPTADIK - Sistem Informasi Tamu</a> | Copyright &copy; 2021 | <a
+						href="https://github.com/Mohpoe/SIPTADIK/" class="text-dark">Made with &hearts;</a></i></small>
+		</div>
+	</footer>
+
+	<script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
-
-
-<!-- <script src="./assets/js/bootstrap.min.js"></script> -->
-<script src="./assets/js/jquery.js"></script>
-<script src="./assets/js/bootstrap.bundle.min.js"></script>
 
 </html>
