Mengubah Status -> Tujuan
Mengubah kolom status (diterima & ditolak) pada halaman pejabat dan riwayat menjadi kolom Tujuan

--- a/pejabat.html
+++ b/pejabat.html
@@ -63,7 +63,7 @@
     </nav>
     <!-- NAVBAR END HERE -->
 
-    <!-- ISINYA MULAI DI SINI -->
+    <!-- DETAIL PEJABAT START -->
     <div class="container">
 
         <div class="container my-4">
@@ -305,9 +305,9 @@
         </div>
 
     </div>
-    <!-- ISINYA BERAKHIR DI SINI -->
+    <!-- DETAIL PEJABAT END -->
 
-    <!-- ISI MULAI -->
+    <!-- RIWAYAT MULAI -->
     <div class="container">
         <h2 class="my-4">Riwayat Tamu: Pejabat Satu, M.Si</h2>
 
@@ -327,7 +327,7 @@
                                         <th>Nama Tamu</th>
                                         <th>Instansi</th>
                                         <th>Bidang Tujuan</th>
-                                        <th>Status</th>
+                                        <th>Tujuan</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -356,9 +356,7 @@
                                         </td>
                                         <td>Instansi Tamu 1</td>
                                         <td>Bidang Tujuan 1</td>
-                                        <td class="candidate-list-favourite-time">
-                                            <span class="text-success">Diterima</span>
-                                        </td>
+                                        <td>Tujuan Tamu 1</td>
                                     </tr>
                                     <!-- TAMU 1 END -->
                                     <!-- MODAL TAMU 1 -->
@@ -394,6 +392,13 @@
                                                                 value="Dinas Pendidikan Kabupaten Pinrang">
                                                         </div>
                                                     </div>
+													<div class="mb-3 row">
+														<label class="col-sm-2 col-form-label">Sub Bidang Tujuan</label>
+														<div class="col-sm-10">
+															<input type="text" readonly class="form-control-plaintext"
+																value="Sub Bidang Tujuan">
+														</div>
+													</div>
                                                     <div class="mb-3 row">
                                                         <label class="col-sm-2 col-form-label">Tujuan</label>
                                                         <div class="col-sm-10">
@@ -443,9 +448,7 @@
                                         </td>
                                         <td>Instansi Tamu 2</td>
                                         <td>Bidang Tujuan Tamu 2</td>
-                                        <td class="candidate-list-favourite-time">
-                                            <span class="text-danger">Ditolak</span>
-                                        </td>
+                                        <td>Tujuan Tamu 2</td>
                                     </tr>
                                     <!-- TAMU 2 END -->
                                     <!-- MODAL TAMU 2 -->
@@ -481,6 +484,13 @@
                                                                 value="Pemkab Pinrang">
                                                         </div>
                                                     </div>
+													<div class="mb-3 row">
+														<label class="col-sm-2 col-form-label">Sub Bidang Tujuan</label>
+														<div class="col-sm-10">
+															<input type="text" readonly class="form-control-plaintext"
+																value="Sub Bidang Tujuan">
+														</div>
+													</div>
                                                     <div class="mb-3 row">
                                                         <label class="col-sm-2 col-form-label">Tujuan</label>
                                                         <div class="col-sm-10">
@@ -536,7 +546,7 @@
         <!-- Pagination Selesai -->
 
     </div>
-    <!-- ISI SELESAI -->
+    <!-- RIWAYAT SELESAI -->
 
     <footer class="footer mt-auto py-3 warna-dasar">
         <div class="text-center">
