--- a/tamu.html
+++ b/tamu.html
@@ -13,7 +13,7 @@
 	</title>
 </head>
 
-<body class="d-flex flex-column h-100" style="background-image: url(/img/bg.jpg);background-size: cover;">
+<body class="d-flex flex-column h-100" style="background-image: url(./img/bg.jpg);background-size: cover;">
 	<!-- NAVBAR START HERE -->
 	<nav class="navbar navbar-expand-lg navbar-light warna-dasar sticky-top">
 		<div class="container">
