--- a/riwayat.html
+++ b/riwayat.html
@@ -83,7 +83,7 @@
 										<th>Nama Tamu</th>
 										<th>Instansi</th>
 										<th>Bidang Tujuan</th>
-										<th>Status</th>
+										<th>Tujuan</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -112,9 +112,7 @@
 										</td>
 										<td>Instansi Tamu 1</td>
 										<td>Bidang Tujuan 1</td>
-										<td class="candidate-list-favourite-time">
-											<span class="text-success">Diterima</span>
-										</td>
+										<td>Tujuan Tamu 1</td>
 									</tr>
 									<!-- TAMU 1 END -->
 									<!-- MODAL TAMU 1 -->
@@ -148,6 +146,13 @@
 														<div class="col-sm-10">
 															<input type="text" readonly class="form-control-plaintext"
 																value="Dinas Pendidikan Kabupaten Pinrang">
+														</div>
+													</div>
+													<div class="mb-3 row">
+														<label class="col-sm-2 col-form-label">Sub Bidang Tujuan</label>
+														<div class="col-sm-10">
+															<input type="text" readonly class="form-control-plaintext"
+																value="Sub Bidang Tujuan">
 														</div>
 													</div>
 													<div class="mb-3 row">
@@ -199,9 +204,7 @@
 										</td>
 										<td>Instansi Tamu 2</td>
 										<td>Bidang Tujuan Tamu 2</td>
-										<td class="candidate-list-favourite-time">
-											<span class="text-danger">Ditolak</span>
-										</td>
+										<td>Tujuan Tamu 2</td>
 									</tr>
 									<!-- TAMU 2 END -->
 									<!-- MODAL TAMU 2 -->
@@ -235,6 +238,13 @@
 														<div class="col-sm-10">
 															<input type="text" readonly class="form-control-plaintext"
 																value="Pemkab Pinrang">
+														</div>
+													</div>
+													<div class="mb-3 row">
+														<label class="col-sm-2 col-form-label">Sub Bidang Tujuan</label>
+														<div class="col-sm-10">
+															<input type="text" readonly class="form-control-plaintext"
+																value="Sub Bidang Tujuan">
 														</div>
 													</div>
 													<div class="mb-3 row">
