--- a/pejabat.html
+++ b/pejabat.html
@@ -318,9 +318,11 @@
                         <div class="user-dashboard-info-box table-responsive mb-0 bg-white p-4 shadow-sm">
                             <input class="form-control d-inline-block" style="width: 20%;min-width: 200px;"
                                 type="search" placeholder="Search" aria-label="Search">
+                            <!-- TEMPORARY ICON -->
                             <i class="bi bi-filter-square-fill" style="font-size: 1.5rem;color: #ababab"></i>
                             <i class="bi bi-arrow-right-square" style="font-size: 1.5rem;color: #ababab"></i>
                             <i class="bi bi-arrow-left-square" style="font-size: 1.5rem;color: #ababab"></i>
+                            <!-- TEMPORARY ICON -->
                             <table class="table manage-candidates-top mb-0">
                                 <thead>
                                     <tr>
