--- a/pejabat.html
+++ b/pejabat.html
@@ -7,11 +7,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="./favicon.ico">
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/css/main.css" rel="stylesheet">
-    <link href="./assets/css/riwayat.css" rel="stylesheet">
-    <link href="./assets/css/icons.css" rel="stylesheet">
+    <link rel="icon" href="favicon.ico">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/riwayat.css" rel="stylesheet">
+    <link href="assets/css/icons.css" rel="stylesheet">
     <title>
         SIPTADIK | Detail: Pejabat Satu, M.Si
     </title>
@@ -21,7 +21,7 @@
     <!-- NAVBAR START HERE -->
     <nav class="navbar navbar-expand-lg navbar-light warna-dasar sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="/"><img class="d-inline-block align-middle me-1" src="./img/title.png" alt="" width="20" height="20"> <b class="d-inline-block align-middle">SIPTADIK</b></a>
+            <a class="navbar-brand" href="/"><img class="d-inline-block align-middle me-1" src="img/title.png" alt="" width="20" height="20"> <b class="d-inline-block align-middle">SIPTADIK</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,20 +41,20 @@
                             Menu
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./admin.html">Admin</a></li>
-                            <li><a class="dropdown-item" href="./tamu.html">Tamu</a></li>
-                            <li><a class="dropdown-item" href="./riwayat.html">Riwayat</a></li>
+                            <li><a class="dropdown-item" href="admin.php">Admin</a></li>
+                            <li><a class="dropdown-item" href="tamu.php">Tamu</a></li>
+                            <li><a class="dropdown-item" href="riwayat.php">Riwayat</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="./detail.html">Profil</a></li>
-                            <li><a class="dropdown-item" href="./pejabat.html">Pejabat</a></li>
+                            <li><a class="dropdown-item" href="detail.php">Profil</a></li>
+                            <li><a class="dropdown-item" href="pejabat.html">Pejabat</a></li>
                         </ul>
                     </li>
                 </ul>
                 <section class="d-flex">
                     <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-                    <button class="btn bg-danger text-light" id="tbl-keluar">Keluar</button>
+                    <a href="keluar.php" class="btn bg-danger text-light" id="tbl-keluar">Keluar</a>
                 </section>
             </div>
         </div>
@@ -72,7 +72,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="d-flex flex-column align-items-center text-center">
-                                    <img src="./img/orang-1.jpeg" alt="Admin" class="rounded-circle" width="150">
+                                    <img src="img/orang-1.jpeg" alt="Admin" class="rounded-circle" width="150">
                                     <div class="mt-3">
                                         <h4>Pejabat Satu, M.Si</h4>
                                         <p class="text-secondary mb-1">Supervisor Divisi 1</p>
@@ -309,7 +309,7 @@
                                     <tr class="candidates-list">
                                         <td class="title">
                                             <div class="thumb">
-                                                <img class="img-fluid" src="./img/tamu1.jpg" alt="">
+                                                <img class="img-fluid" src="img/tamu1.jpg" alt="">
                                             </div>
                                             <div class="candidate-list-details">
                                                 <div class="candidate-list-info">
@@ -391,7 +391,7 @@
                                     <tr class="candidates-list">
                                         <td class="title">
                                             <div class="thumb">
-                                                <img class="img-fluid" src="./img/tamu2.jpg" alt="">
+                                                <img class="img-fluid" src="img/tamu2.jpg" alt="">
                                             </div>
                                             <div class="candidate-list-details">
                                                 <div class="candidate-list-info">
@@ -508,7 +508,7 @@
         </div>
     </footer>
 
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
