--- a/debug.html
+++ b/debug.html
@@ -1,10 +1,11 @@
+"
 <!DOCTYPE html>
 <html>
 
 <head>
     <link rel="shortcut icon" href="//ssl.gstatic.com/docs/script/images/favicon.ico">
     <title>Salah</title>
-    <style type="text/css" nonce="Pz92bEr2jPctmnuV6IjyEw">
+    <style type="text/css" nonce="ddW1sYdU6HnwBzSaIc5XSQ">
         body {
             background-color: #fff;
             margin: 0;
@@ -23,7 +24,7 @@
 
 <body style="margin:20px">
     <div><img alt="Google Apps Script" src="//ssl.gstatic.com/docs/script/images/logo.png"></div>
-    <div style="text-align:center;font-family:monospace;margin:50px auto 0;max-width:600px">Exception: Argumen tidak boleh nol: findText (baris 31, file &quot;Kode&quot;)</div>
+    <div style="text-align:center;font-family:monospace;margin:50px auto 0;max-width:600px">ReferenceError: dataTambah is not defined (baris 63, file &quot;Kode&quot;)</div>
 </body>
 
-</html>
+</html>"
