fix: tambah user; tarik data user baru

--- a/debug.html
+++ b/debug.html
@@ -1,30 +1,1 @@
-"
-<!DOCTYPE html>
-<html>
-
-<head>
-    <link rel="shortcut icon" href="//ssl.gstatic.com/docs/script/images/favicon.ico">
-    <title>Salah</title>
-    <style type="text/css" nonce="ddW1sYdU6HnwBzSaIc5XSQ">
-        body {
-            background-color: #fff;
-            margin: 0;
-            padding: 0;
-        }
-        
-        .errorMessage {
-            font-family: Arial, sans-serif;
-            font-size: 12pt;
-            font-weight: bold;
-            line-height: 150%;
-            padding-top: 25px;
-        }
-    </style>
-</head>
-
-<body style="margin:20px">
-    <div><img alt="Google Apps Script" src="//ssl.gstatic.com/docs/script/images/logo.png"></div>
-    <div style="text-align:center;font-family:monospace;margin:50px auto 0;max-width:600px">ReferenceError: dataTambah is not defined (baris 63, file &quot;Kode&quot;)</div>
-</body>
-
-</html>"
+{"dataTambah":[1632593787,"ini nama tamu","000321","JSDI Makassar","b1","b1s1","js","Minum kopi","26_9_2021_2_16_27","piket1"],"foto":["137,80,78,71,13,10,26,10,0,0,0,13,73,72,68,82,0,0,1,124,0,0,1,144,8,6,0,0,0,173,97,219,51,0,0,0,1,115,82,71,66,0,174,206,28,233,0,0,32,0,73,68,65,84,120,94,84,189,105,147,101,231,117,165,183,207,185,99,102,214,128,73,148,216,163,195,17,254,59,182,66,10,73,86,71,123,248,238,176,68,18,34,197,238,246,7,255,201,14,127,105,135,91,106,81,2,9,128,5,160,170,50,243,142,199,241,60,107,191,55,33,48,138,24,170,242,222,115,222,97,15,107,175,189,246,244,127,255,199,255,101,169,235,92,203,185,234,52,159,106,117,183,173,235,178,170,227,249,90,235,205,174,230,205,182,206,151,75,157,142,135,90,174,215,218,111,183,181,153,247,53,93,230,90,79,235,186,212,185,142,211,83,77,181,248,251,117,189,214,106,158,107,179,94,213,233,120,172,235,245,90,19,191,187,92,171,106,169,121,154,106,154,170,46,215,83,93,79,231,218,206,155,218,172,214,117,60,158,235,60,79,53,221,237,234,177,206,181,190,187,171,211,249"]}
