--- a/debug.html
+++ b/debug.html
@@ -1,1 +1,36 @@
-{"dataTambah":[1632593787,"ini nama tamu","000321","JSDI Makassar","b1","b1s1","js","Minum kopi","26_9_2021_2_16_27","piket1"],"foto":["137,80,78,71,13,10,26,10,0,0,0,13,73,72,68,82,0,0,1,124,0,0,1,144,8,6,0,0,0,173,97,219,51,0,0,0,1,115,82,71,66,0,174,206,28,233,0,0,32,0,73,68,65,84,120,94,84,189,105,147,101,231,117,165,183,207,185,99,102,214,128,73,148,216,163,195,17,254,59,182,66,10,73,86,71,123,248,238,176,68,18,34,197,238,246,7,255,201,14,127,105,135,91,106,81,2,9,128,5,160,170,50,243,142,199,241,60,107,191,55,33,48,138,24,170,242,222,115,222,97,15,107,175,189,246,244,127,255,199,255,101,169,235,92,203,185,234,52,159,106,117,183,173,235,178,170,227,249,90,235,205,174,230,205,182,206,151,75,157,142,135,90,174,215,218,111,183,181,153,247,53,93,230,90,79,235,186,212,185,142,211,83,77,181,248,251,117,189,214,106,158,107,179,94,213,233,120,172,235,245,90,19,191,187,92,171,106,169,121,154,106,154,170,46,215,83,93,79,231,218,206,155,218,172,214,117,60,158,235,60,79,53,221,237,234,177,206,181,190,187,171,211,249"]}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<div>
+
+</div>
+
+<body>
+    <script>
+        const url = "https://script.google.com/macros/s/AKfycbx6QxaoEdDJf8e9zItLDwD6Oq6er4L8cnknO2ET2E-mBxK2QqM/exec";
+        data = {
+            'pengguna': 'admin',
+            'sandi': 123
+        }
+
+        async function kirim(url, data) {
+            const response = await fetch(url, {
+                method: 'POST', // or 'PUT'
+                // headers: {
+                //     'Content-Type': 'application/x-www-form-urlencoded', //'multipart/form-data',   //
+                // },
+                body: JSON.stringify(data),
+            })
+            return response.text();
+        }
+        document.querySelector('div').innerHTML = kirim(url, data)
+    </script>
+</body>
+
+</html>
