--- a/index.html
+++ b/index.html
@@ -1,66 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://unpkg.com/currency.js@2.0.4/dist/currency.min.js"></script>
-    <style>
-        td {
-            border: 1px solid black;
-            padding: 5px;
-        }
-
-        table {
-            border-collapse: collapse;
-        }
-
-        tr {
-            height: 40px;
-        }
-
-        input,
-        select {
-            height: 50px;
-            border: none;
-            outline: none;
-            width: 100%;
-            margin: 0;
-        }
-    </style>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="./favicon.ico">
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/css/main.css" rel="stylesheet">
+    <title>
+        SIPTADIK | Halaman Baru
+    </title>
 </head>
 
-<body>
-    <table>
-        <tr>
-            <td style="width: 180px;">TANGGAL</td>
-            <td style="width: 180px;"><input type="date"></td>
-        </tr>
-        <tr>
-            <td>SUBBIDANG</td>
-            <td>
-                <select>
-                    <option>Subbidang 1</option>
-                    <option>Subbidang 2</option>
-                    <option>Subbidang 3</option>
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td>Harga</td>
-            <td><input id="harga" type="text"></td>
-        </tr>
-    </table>
-    <script>
-        let harga = document.getElementById('harga')
-        
-        harga.addEventListener('change', (e) => {
-            let hargaoke = currency(e.target.value, { separator: '.',decimal: ',' , symbol: 'Rp. '}).format();
-            harga.value = hargaoke;
-        })
-    </script>
+<body class="d-flex flex-column h-100">
+    <!-- NAVBAR START HERE -->
+    <nav class="navbar navbar-expand-lg navbar-light warna-dasar sticky-top">
+        <div class="container">
+            <a class="navbar-brand" href="/"><img class="d-inline-block align-middle me-1" src="./img/title.png" alt=""
+                    width="20" height="20"> <b class="d-inline-block align-middle">SIPTADIK</b></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Beranda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kontak</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Bantuan</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Menu
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="./admin.html">Admin</a></li>
+                            <li><a class="dropdown-item" href="./tamu.html">Tamu</a></li>
+                            <li><a class="dropdown-item" href="./riwayat.html">Riwayat</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="./detail.html">Profil</a></li>
+                            <li><a class="dropdown-item" href="./pejabat.html">Pejabat</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <section class="d-flex">
+                    <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+                    <button class="btn bg-danger text-light" id="tbl-keluar">Keluar</button>
+                </section>
+            </div>
+        </div>
+    </nav>
+    <!-- NAVBAR END HERE -->
+
+    <!-- MAIN CONTENT -->
+    <div class="container">
+        <table>
+            <tr>
+                <td style="width: 180px;">TANGGAL</td>
+                <td style="width: 180px;"><input type="date"></td>
+            </tr>
+            <tr>
+                <td>SUBBIDANG</td>
+                <td>
+                    <select>
+                        <option>Subbidang 1</option>
+                        <option>Subbidang 2</option>
+                        <option>Subbidang 3</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Harga</td>
+                <td><input id="harga" type="text"></td>
+            </tr>
+        </table>
+        <script>
+            let harga = document.getElementById('harga')
+
+            harga.addEventListener('change', (e) => {
+                let hargaoke = currency(e.target.value, { separator: '.', decimal: ',', symbol: 'Rp. ' }).format();
+                harga.value = hargaoke;
+            })
+        </script>
+    </div>
+
+    <footer class="footer mt-auto py-3 warna-dasar">
+        <div class="text-center">
+            <small><i><a href="/" class="text-dark">SIPTADIK - Sistem Informasi Tamu</a> | Copyright &copy; 2021 | <a
+                        href="https://www.google.com" class="text-dark">Made with &hearts;</a></i></small>
+        </div>
+    </footer>
+
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
