--- a/model.html
+++ b/model.html
@@ -1,4 +1,5 @@
 <div>Teachable Machine Image Model</div>
+<iframe src="https://teachablemachine.withgoogle.com/train/image" frameborder="0"></iframe>
 <button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
@@ -55,7 +56,10 @@
             const namaPrediksi = prediction[i].className; 
             const skor = prediction[i].probability.toFixed(2);
             if(namaPrediksi == 'dot' && skor == 1){
-                alert('kamu dot');
+                console.log('kamu dot');
+                break;
+            }else if(namaPrediksi == 'syuaib' && skor == 1){
+                console.log('kamu ' + namaPrediksi)
                 break;
             }
             // labelContainer.childNodes[i].innerHTML = classPrediction;
